userpreference/target/classes/META-INF/fabric8/openshift/userpreference-deploymentconfig.yml
---
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
    fabric8.io/git-commit: 96ebedcd1584b5eb6141ec51d8aca2cad60eb051
    fabric8.io/iconUrl: img/icons/spring-boot.svg
    fabric8.io/git-branch: master
    fabric8.io/metrics-path: dashboard/file/kubernetes-pods.json/?var-project=userpreference&var-version=0.0.1-SNAPSHOT
    fabric8.io/scm-tag: HEAD
    fabric8.io/scm-url: https://github.com/spring-projects/spring-boot/spring-boot-starter-parent/debezium/userpreference
  labels:
    app: userpreference
    provider: fabric8
    version: 0.0.1-SNAPSHOT
    group: io.syndesis.demo
  name: userpreference
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    app: userpreference
    provider: fabric8
    group: io.syndesis.demo
  strategy:
    rollingParams:
      timeoutSeconds: 3600
    type: Rolling
  template:
    metadata:
      annotations:
        fabric8.io/git-commit: 96ebedcd1584b5eb6141ec51d8aca2cad60eb051
        fabric8.io/metrics-path: dashboard/file/kubernetes-pods.json/?var-project=userpreference&var-version=0.0.1-SNAPSHOT
        fabric8.io/scm-url: https://github.com/spring-projects/spring-boot/spring-boot-starter-parent/debezium/userpreference
        fabric8.io/iconUrl: img/icons/spring-boot.svg
        fabric8.io/git-branch: master
        fabric8.io/scm-tag: HEAD
      labels:
        app: userpreference
        provider: fabric8
        version: 0.0.1-SNAPSHOT
        group: io.syndesis.demo
    spec:
      containers:
      - env:
        - name: KUBERNETES_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        image: userpreference:latest
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 180
        name: spring-boot
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        - containerPort: 9779
          name: prometheus
          protocol: TCP
        - containerPort: 8778
          name: jolokia
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 30
        securityContext:
          privileged: false
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - spring-boot
      from:
        kind: ImageStreamTag
        name: userpreference:latest
    type: ImageChange
